# sweetch-bot

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: cfg.rs  cron.rs  daemon.rs  init.rs  main.rs  notifier.rs  switch.rs  testutils.rs
src/configuration/: mod.rs
src/entities/: mod.rs
