[package]
name = "sweetch-bot"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2018"
description = ""
repository = "https://github.com/devzbysiu/sweetch-bot"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
anyhow = "1.0.32"
notify-rust = "4.0.0"
clokwerk = "0.3.3"
daemonize = "0.4.1"
log = "0.4.11"
flexi_logger = { version = "0.18.0", default_features = false }
ureq = { version =  "1.4.1", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5.6"
dirs = "3.0.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
