[package]
name = "sweetch-bot"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = ""
repository = "https://github.com/devzbysiu/sweetch-bot"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = []
categories = []
homepage = ""
documentation = ""

[dependencies]
anyhow = "1.0.58"
notify-rust = "4.5.8"
clokwerk = "0.3.5"
daemonize = "0.4.1"
log = "0.4.17"
flexi_logger = { version = "0.22.5", default_features = false }
ureq = { version =  "2.4.0", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
toml = "0.5.9"
dirs = "4.0.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
